--- a/index.html
+++ b/index.html
@@ -4,104 +4,97 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Cerdo</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Joan&family=Montserrat&family=Oswald&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
+    <title>home</title>
 </head>
 <body>
-  <header>
-    <div>
+    <!-- header -->
+    <header>
       <div>
-        <img class="logo" src="../img/logochicken.jpg" alt="logomycchicken">
+        <div>
+          <img class="logo" src="./img/logochicken.jpg" alt="logomycchicken">
+        </div>
+        <div>
+          <h1 class="titulo">MYC CHICKEN .SRL</h1>
+        </div>
       </div>
-      <div>
-        <h1>MYC CHICKEN SRL</h1>
-        <h2>CERDO</h2>
-      </div>
-      <div>
-        <section class="staff">
-            <p>¿Queres unirte a MYC CHICKEN? Click Aca!</p>
+      
+    <!-- nav -->
+      <nav class="nav">
+        <ul class="menu">
+          <li><a href="./pages/pollos.html">Pollos</a></li>
+          <li><a href="./pages/cerdo.html">Cerdo</a></li>
+          <li><a href="./pages/productoscongelados.html">Productos Congelados</a></li>
+          <li><a href="./pages/contacto.html">Contacto</a></li>
+        </ul>
+      </nav>
+    </header>
+    <!-- main -->
+      <main id="portada">
+          
+        <div>
+          <iframe class="video"src="https://www.youtube.com/embed/nkhSgCKTm2A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <section>
+            <div>
+              <div>
+                <h3>Quienes somos?</h3>
+              </div>
+              <div>
+                <img class="local" src="./img/localchicken.webp"></div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum inventore nam ipsum aut vero eius sit corporis cum necessitatibus, qui rem amet repellat earum reiciendis facilis, est dolorem quis cumque quam, quaerat placeat voluptatum a! Tenetur dolorum error veritatis itaque suscipit aliquam saepe. Ab itaque commodi ipsam odit expedita laboriosam eligendi? Autem ut expedita porro necessitatibus maxime, ullam impedit aliquid, ad rerum eligendi nisi atque blanditiis, cumque provident eius corporis quidem quasi qui nemo. Soluta eum dicta esse, corporis quia repudiandae eligendi similique veniam odio magni veritatis sapiente, omnis asperiores reiciendis provident ducimus deserunt suscipit maiores accusantium nemo minus dolore.</p>
+              </div> 
+              <div>
+                <h3>Cuidados de nuestros productos.</h3>
+              </div>
+              <div>
+                <img class="cuidados" src="./img/cuidadoschicken.jpg">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum inventore nam ipsum aut vero eius sit corporis cum necessitatibus, qui rem amet repellat earum reiciendis facilis, est dolorem quis cumque quam, quaerat placeat voluptatum a! Tenetur dolorum error veritatis itaque suscipit aliquam saepe. Ab itaque commodi ipsam odit expedita laboriosam eligendi? Autem ut expedita porro necessitatibus maxime, ullam impedit aliquid, ad rerum eligendi nisi atque blanditiis, cumque provident eius corporis quidem quasi qui nemo. Soluta eum dicta esse, corporis quia repudiandae eligendi similique veniam odio magni veritatis sapiente, omnis asperiores reiciendis provident ducimus deserunt suscipit maiores accusantium nemo minus dolore.</p>
+              </div>
+            </div>
         </section>
-      </div>
-    </div>
-    <nav class="nav">
-      <ul>
-        <li><a href="../index.html">HOME</a></li>
-        <li><a href="./pollos.html">POLLOS</a></li>
-        <li><a href="./productoscongelados.html">PRODUCTOS CONGELADOS</a></li>
-        <li><a href="./contacto.html">CONTACTO</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main id="portada">
-      <section class="section-1">
-        <h3>BONDIOLA</h3>
-        <img class="productos"data-aos="flip-right"data-aos-duration="3000"  src="../img/bondiola.jpg" alt="">
-        <img class="carrito" src="../img/carrito.png" alt="">
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti nisi est temporibus porro animi voluptatum, ea rem perferendis facilis quos aspernatur corrupti reprehenderit quam? Facere eius consequatur aperiam consequuntur possimus!
-        </p>
-      </section>
-      <section class="section-2">
-        <H3>PECHITO</H3>
-        <img class="productos"data-aos="flip-right"data-aos-duration="3000"  src="../img/pechito.jpg" alt="">
-        <img class="carrito" src="../img/carrito.png" alt="">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde aperiam quod quis modi fugiat, incidunt culpa. Provident non sunt quos beatae repudiandae quia corrupti vel dicta! Fugit quod nulla sint.</p>
-      </section>
-      <section class="section-3">
-        <H3>COSTILLAS</H3>
-        <img class="productos"data-aos="flip-right"data-aos-duration="3000"  src="../img/carre.jpg" alt="">
-        <img class="carrito" src="../img/carrito.png" alt="">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, blanditiis perferendis. Rerum fugiat tempore amet maiores consequatur sit magnam, aliquid esse nobis, et quidem fugit mollitia. Modi distinctio illum quod.</p>
-      </section>
-      <section class="section-4">
-        <H3>CHORIZOS</H3>
-        <img class="productos"data-aos="flip-right"data-aos-duration="3000"  src="../img/chorizosjpg.jpg" alt="">
-        <img class="carrito"  src="../img/carrito.png" alt="">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad recusandae accusantium dolorum quia in voluptatibus! Assumenda a consectetur laborum doloremque numquam, ipsam vitae minima deserunt perspiciatis dolores nulla sint delectus.</p>
-      </section>
-      <section class="section-5">
-        <H3>JAMON</H3>
-        <img class="productos"data-aos="flip-right"data-aos-duration="3000"  src="../img/jamon.jpg" alt="">
-        <img class="carrito"  src="../img/carrito.png" alt="">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab eveniet suscipit praesentium architecto molestiae laboriosam tenetur reiciendis aliquam nulla labore, repudiandae facere provident recusandae impedit quis voluptatum iusto accusantium! Dolorem?</p>
-      </section>
-      <section class="section-6">
-        <H3>LECHON</H3>
-        <img class="productos"data-aos="zoom-in"data-aos-duration="3000" src="../img/lechon.jpg" alt="">
-        <img class="carrito"  src="../img/carrito.png" alt="">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, quos. Voluptas, unde aperiam, blanditiis illum rerum iusto necessitatibus aspernatur reprehenderit cupiditate et nulla provident eligendi doloribus voluptate tempora beatae suscipit.</p>
-      </section>
-      <section class="section-7">
-        <H3>SOLOMILLO</H3>
-        <img class="productos"data-aos="flip-right"data-aos-duration="3000" src="../img/solomillo.jpg" alt="">
-        <img class="carrito"  src="../img/carrito.png" alt="">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus accusantium soluta sit error ipsa. Quas cum dicta magni nemo eaque sit soluta nostrum non deserunt nulla, ex corrupti fuga accusamus.</p>
-      </section>
-  </main>
-  <footer id="footer">
-    <div>
-      <div>
-        <h3>AYUDA</h3>
-      </div>
-      <div>
+      </main>
+    <!-- footer -->
+      <footer id="footer">
         <div>
-            <h3>Como comprar</h3>
+          <div>
+            <h3>AYUDA</h3>
+          </div>
+          <div>
+            <h4>Como comprar</h4>
+            <h4>Preguntas frecuentes</h4>
+            <h4>Problemas de compra</h4>
+            <h4>Terminos y condiciones</h4>
+            <h4>Politica de privacidad</h4>
+          </div>
+          <div>
+            <a class="face" href="http://www.facebook.com/Granja-ADT-112152821348985/?ref=page_internal"><img src="./img/fblogo.png"></a>
+          </div>
+          <div>
+            <a class="twitter" href="http://twitter.com/polleria_moreno?lang=es"><img src="./img/twitterlogo.png"></a>
+          </div>
+          <div>
+            <a class="instagram" href="http://www.instagram.com/granjaadt/"><img src="./img/instagramlogo.jpg"></a>
+          </div>
+          <div>
+            <div>
+              <h3>Donde encontrarnos?</h3>
+            </div>
+            <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.1772052890265!2d-58.597865485011596!3d-34.57438246345304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb99e9f4b2213%3A0x8708a6bdfa8add20!2sM%20Y%20C%20CHICKEN%20S.R.L!5e0!3m2!1ses!2sar!4v1653612561611!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+          <div>
+            <img class="tarjetas" src="./img/visa.png" alt="">
+          </div>
+          <div>
+            <img class="tarjetas" src="./img/master.png" alt="">
+          </div>
+          <div>
+            <img class="tarjetas" src="./img/mercadopago.png" alt="">
+          </div>
         </div>
-        <div>
-            <h3>Preguntas frecuentes</h3>
-        </div>
-        <div>
-            <h3>Problemas de compra</h3>
-        </div>
-        <div>
-            <h3>Terminos y concidicones</h3>
-        </div>
-      </div>
-    </div>
-  </footer>
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>
-    AOS.init();
-  </script>
-</body>
+      </footer>
+    </body>
 </html>
