--- a/pages/cerdo.html
+++ b/pages/cerdo.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Cerdo</title>
 </head>
 <body>
@@ -17,11 +17,6 @@
       <div>
         <h1>MYC CHICKEN SRL</h1>
         <h2>CERDO</h2>
-      </div>
-      <div>
-        <section class="staff">
-            <p>¿Queres unirte a MYC CHICKEN? Click Aca!</p>
-        </section>
       </div>
     </div>
     <nav class="nav">
@@ -36,44 +31,44 @@
   <main id="portada">
       <section class="section-1">
         <h3>BONDIOLA</h3>
-        <img class="productos"data-aos="flip-right"data-aos-duration="3000"  src="../img/bondiola.jpg" alt="">
+        <img class="productos"data-aos="zoom-in" data-aos-duration="1000"  src="../img/bondiola.jpg" alt="">
         <img class="carrito" src="../img/carrito.png" alt="">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti nisi est temporibus porro animi voluptatum, ea rem perferendis facilis quos aspernatur corrupti reprehenderit quam? Facere eius consequatur aperiam consequuntur possimus!
         </p>
       </section>
       <section class="section-2">
         <H3>PECHITO</H3>
-        <img class="productos"data-aos="flip-right"data-aos-duration="3000"  src="../img/pechito.jpg" alt="">
+        <img class="productos" data-aos="zoom-in" data-aos-duration="1000"  src="../img/pechito.jpg" alt="">
         <img class="carrito" src="../img/carrito.png" alt="">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde aperiam quod quis modi fugiat, incidunt culpa. Provident non sunt quos beatae repudiandae quia corrupti vel dicta! Fugit quod nulla sint.</p>
       </section>
       <section class="section-3">
         <H3>COSTILLAS</H3>
-        <img class="productos"data-aos="flip-right"data-aos-duration="3000"  src="../img/carre.jpg" alt="">
+        <img class="productos"data-aos="zoom-in" data-aos-duration="1000"  src="../img/carre.jpg" alt="">
         <img class="carrito" src="../img/carrito.png" alt="">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, blanditiis perferendis. Rerum fugiat tempore amet maiores consequatur sit magnam, aliquid esse nobis, et quidem fugit mollitia. Modi distinctio illum quod.</p>
       </section>
       <section class="section-4">
         <H3>CHORIZOS</H3>
-        <img class="productos"data-aos="flip-right"data-aos-duration="3000"  src="../img/chorizosjpg.jpg" alt="">
+        <img class="productos"data-aos="zoom-in" data-aos-duration="1000"  src="../img/chorizosjpg.jpg" alt="">
         <img class="carrito"  src="../img/carrito.png" alt="">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad recusandae accusantium dolorum quia in voluptatibus! Assumenda a consectetur laborum doloremque numquam, ipsam vitae minima deserunt perspiciatis dolores nulla sint delectus.</p>
       </section>
       <section class="section-5">
         <H3>JAMON</H3>
-        <img class="productos"data-aos="flip-right"data-aos-duration="3000"  src="../img/jamon.jpg" alt="">
+        <img class="productos"data-aos="zoom-in" data-aos-duration="1000"  src="../img/jamon.jpg" alt="">
         <img class="carrito"  src="../img/carrito.png" alt="">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab eveniet suscipit praesentium architecto molestiae laboriosam tenetur reiciendis aliquam nulla labore, repudiandae facere provident recusandae impedit quis voluptatum iusto accusantium! Dolorem?</p>
       </section>
       <section class="section-6">
         <H3>LECHON</H3>
-        <img class="productos"data-aos="zoom-in"data-aos-duration="3000" src="../img/lechon.jpg" alt="">
+        <img class="productos"data-aos="zoom-in" data-aos-duration="1000" src="../img/lechon.jpg" alt="">
         <img class="carrito"  src="../img/carrito.png" alt="">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, quos. Voluptas, unde aperiam, blanditiis illum rerum iusto necessitatibus aspernatur reprehenderit cupiditate et nulla provident eligendi doloribus voluptate tempora beatae suscipit.</p>
       </section>
       <section class="section-7">
         <H3>SOLOMILLO</H3>
-        <img class="productos"data-aos="flip-right"data-aos-duration="3000" src="../img/solomillo.jpg" alt="">
+        <img class="productos"data-aos="zoom-in" data-aos-duration="1000" src="../img/solomillo.jpg" alt="">
         <img class="carrito"  src="../img/carrito.png" alt="">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus accusantium soluta sit error ipsa. Quas cum dicta magni nemo eaque sit soluta nostrum non deserunt nulla, ex corrupti fuga accusamus.</p>
       </section>
