--- a/index.html
+++ b/index.html
@@ -25,33 +25,29 @@
     <!-- nav -->
       <nav class="nav">
         <ul class="menu">
-          <li><a href="./pages/pollos.html">Pollos</a></li>
-          <li><a href="./pages/cerdo.html">Cerdo</a></li>
-          <li><a href="./pages/productoscongelados.html">Productos Congelados</a></li>
-          <li><a href="./pages/contacto.html">Contacto</a></li>
+          <li><a href="./pages/pollos.html">POLLOS</a></li>
+          <li><a href="./pages/cerdo.html">CERDO</a></li>
+          <li><a href="./pages/productoscongelados.html">PRODUCTOS CONGELADOS</a></li>
+          <li><a href="./pages/contacto.html">CONTACTO</a></li>
         </ul>
       </nav>
     </header>
     <!-- main -->
       <main id="portada">
-          
-        <div>
-          <iframe class="video"src="https://www.youtube.com/embed/nkhSgCKTm2A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
         <section>
             <div>
               <div>
                 <h3>Quienes somos?</h3>
               </div>
               <div>
-                <img class="local" src="./img/localchicken.webp"></div>
+                <img class="local" width="600" src="./img/localchicken.webp"></div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum inventore nam ipsum aut vero eius sit corporis cum necessitatibus, qui rem amet repellat earum reiciendis facilis, est dolorem quis cumque quam, quaerat placeat voluptatum a! Tenetur dolorum error veritatis itaque suscipit aliquam saepe. Ab itaque commodi ipsam odit expedita laboriosam eligendi? Autem ut expedita porro necessitatibus maxime, ullam impedit aliquid, ad rerum eligendi nisi atque blanditiis, cumque provident eius corporis quidem quasi qui nemo. Soluta eum dicta esse, corporis quia repudiandae eligendi similique veniam odio magni veritatis sapiente, omnis asperiores reiciendis provident ducimus deserunt suscipit maiores accusantium nemo minus dolore.</p>
               </div> 
               <div>
                 <h3>Cuidados de nuestros productos.</h3>
               </div>
               <div>
-                <img class="cuidados" src="./img/cuidadoschicken.jpg">
+                <img class="cuidados" width="600" src="./img/cuidadoschicken.jpg">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum inventore nam ipsum aut vero eius sit corporis cum necessitatibus, qui rem amet repellat earum reiciendis facilis, est dolorem quis cumque quam, quaerat placeat voluptatum a! Tenetur dolorum error veritatis itaque suscipit aliquam saepe. Ab itaque commodi ipsam odit expedita laboriosam eligendi? Autem ut expedita porro necessitatibus maxime, ullam impedit aliquid, ad rerum eligendi nisi atque blanditiis, cumque provident eius corporis quidem quasi qui nemo. Soluta eum dicta esse, corporis quia repudiandae eligendi similique veniam odio magni veritatis sapiente, omnis asperiores reiciendis provident ducimus deserunt suscipit maiores accusantium nemo minus dolore.</p>
               </div>
             </div>
@@ -69,30 +65,6 @@
             <h4>Problemas de compra</h4>
             <h4>Terminos y condiciones</h4>
             <h4>Politica de privacidad</h4>
-          </div>
-          <div>
-            <a class="face" href="http://www.facebook.com/Granja-ADT-112152821348985/?ref=page_internal"><img src="./img/fblogo.png"></a>
-          </div>
-          <div>
-            <a class="twitter" href="http://twitter.com/polleria_moreno?lang=es"><img src="./img/twitterlogo.png"></a>
-          </div>
-          <div>
-            <a class="instagram" href="http://www.instagram.com/granjaadt/"><img src="./img/instagramlogo.jpg"></a>
-          </div>
-          <div>
-            <div>
-              <h3>Donde encontrarnos?</h3>
-            </div>
-            <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.1772052890265!2d-58.597865485011596!3d-34.57438246345304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb99e9f4b2213%3A0x8708a6bdfa8add20!2sM%20Y%20C%20CHICKEN%20S.R.L!5e0!3m2!1ses!2sar!4v1653612561611!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-          </div>
-          <div>
-            <img class="tarjetas" src="./img/visa.png" alt="">
-          </div>
-          <div>
-            <img class="tarjetas" src="./img/master.png" alt="">
-          </div>
-          <div>
-            <img class="tarjetas" src="./img/mercadopago.png" alt="">
           </div>
         </div>
       </footer>
