--- a/pages/productoscongelados.html
+++ b/pages/productoscongelados.html
@@ -26,10 +26,10 @@
     <!-- nav -->
       <nav>
         <ul>
-          <li><a href="../index.html">home</a></li>
-          <li><a href="./pollos.html">Pollos</a></li>
-          <li><a href="./cerdo.html">Cerdo</a></li>
-          <li><a href="./contacto.html">Contacto</a></li>
+          <li><a href="../index.html">HOME</a></li>
+          <li><a href="./pollos.html">POLLOS</a></li>
+          <li><a href="./cerdo.html">CERDO</a></li>
+          <li><a href="./contacto.html">CONTACTO</a></li>
         </ul>
       </nav>
   </header>
@@ -61,32 +61,8 @@
         <h4>Como comprar</h4>
         <h4>Preguntas frecuentes</h4>
         <h4>Problemas de compra</h4>
-        <h4>terminos y condiciones</h4>
-        <h4>politica de privacidad</h4>
-      </div>
-      <div>
-        <a class="face" href="http://www.facebook.com/Granja-ADT-112152821348985/?ref=page_internal"><img src="../img/fblogo.png"></a>
-      </div>
-      <div>
-        <a class="twitter" href="http://twitter.com/polleria_moreno?lang=es"><img src="../img/twitterlogo.png"></a>
-      </div>
-      <div>
-        <a class="instagram" href="http://www.instagram.com/granjaadt/"><img src="../img/instagramlogo.jpg"></a>
-      </div>
-      <div>
-        <div>
-          <h3>Donde encontrarnos?</h3>
-        </div>
-        <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.1772052890265!2d-58.597865485011596!3d-34.57438246345304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb99e9f4b2213%3A0x8708a6bdfa8add20!2sM%20Y%20C%20CHICKEN%20S.R.L!5e0!3m2!1ses!2sar!4v1653612561611!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
-      <div>
-        <img class="tarjetas" src="../img/visa.png" alt="">
-      </div>
-      <div>
-        <img class="tarjetas" src="../img/master.png" alt="">
-      </div>
-      <div>
-        <img class="tarjetas" src="../img/mercadopago.png" alt="">
+        <h4>Terminos y condiciones</h4>
+        <h4>Politica de privacidad</h4>
       </div>
     </div>
   </footer>
